<resources>
    <string name="app_name">Informer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_voter_education">Voter Education</string>
    <string name="drawer_item_polling_stations">Polling Stations</string>
    <string name="drawer_item_faq">FAQs</string>
    <string name="drawer_item_reports">Report Election Offences</string>
    <string name="drawer_item_countdown">Countdown</string>
    <string name="drawer_item_alerts">Alerts</string>
    <string name="drawer_item_invites">Invites</string>
    <string name="countdown">There are only</string>
    <string name="countdownleft">till Elections Day!</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="btnRecordAudio">Record Audio</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO ALERTS button below to get alerts on: \n\n
        Reminder to register,\n Election day,\n Reminder to vote.</string>
    <string name="subscribe_to_news">Subscribe To Alerts</string>
    <string name="msg_subscribed">Subscribed to Alerts</string>
    <string name="log_token">Log Token</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="why_register">Why Register?</string>
    <string name="voterreg_message">
        \n Voting provides an opportunity to choose a leader of your choice \n\n
        Voting provides an opportunity to vie in elections. By law, only registered voters are allowed to vie for elections. \n\n
        You safeguard your rights and freedoms as provided for in the constitution. \n\n
        You give legitimacy to leaders. By electing their leaders, voters give their consent to be led by whoever they have chosen and to reject those who fail to sufficiently represent their interests.\n</string>
    <string name="begin_slider">Begin Slideshow</string>
    <string name="begin_quiz">Take a Quiz</string>
    <string name="begin_penalties">Penalties</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">FINISH</string>
    <string name="myMap">Maps</string>
    <string name="slide_1_title">Step One</string>
    <string name="voter_reg_slide_1_desc">Present your ID/Passport to clerk</string>
    <string name="voting_process_slide_1_desc">Present your voters card and ID</string>
    <string name="slide_2_title">Step Two</string>
    <string name="voter_reg_slide_2_desc">The clerk captures your identity details</string>
    <string name="voting_process_slide_2_desc">Your name is called out</string>
    <string name="slide_3_title">Step Three</string>
    <string name="voter_reg_slide_3_desc">Confirm your identity details are correct</string>
    <string name="voting_process_slide_3_desc">You are given stamped ballot papers </string>
    <string name="slide_4_title">Step Four</string>
    <string name="voter_reg_slide_4_desc">Place your fingers on the fingerprint reader</string>
    <string name="voting_process_slide_4_desc">Mark the ballot papers</string>
    <string name="slide_5_title">Step Five</string>
    <string name="voter_reg_slide_5_desc">Have your passport size photo taken and confirm it is clear</string>
    <string name="voting_process_slide_5_desc">Cast your vote</string>
    <string name="slide_6_title">Step Six</string>
    <string name="voter_reg_slide_6_desc">
Sign IEBC reference book and take registration slip. Leave registration centre.</string>
    <string name="voting_process_slide_6_desc">Left small finger marked with ink</string>
    <string name="slide_7_title">Step Seven</string>
    <string name="voting_process_slide_7_desc">Leave polling station</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="read_aloud">READ ALOUD</string>
    <string name="why_vote">Why Vote?</string>
    <string name="voting_msg">
        \n To Vote, you must: \n
       \t• be a Kenyan citizen \n\t• be at least 18 years old and above \n\t• be Registered as a Voter\n\n
        The polling station is where you vote.\n\n
        Inside the polling station is the Presiding Officer. He or she will inform you about the proper identification to use and the procedure to follow.\n\n
        You will show your national ID or my valid Passport, which ever you used to register. \n\n
        The voting screen or booth is a private place in the polling station where you mark your ballot.\n\n
        The ballot box is where you put your marked ballot paper after you make your choice.

    </string>
    <string name="your_rights">Rights of a voter</string>
    <string name="voter_rights_msg">As a voter, I will have the right to:\n\n a) An orderly peaceful election conducted in accordance with laid down procedures.\n\n
b) Know the candidates and, through their campaigns, what they stand for.\n\n
c) Choose a candidate by casting a secret ballot without any interference.\n\n
d) Vote as my conscience tells you.\n\n e) Express my opinion about the candidates, their campaigns and the issues they talk about with out fear of intimidation.</string>
    <string name="your_duties">Duties of a voter</string>
    <string name="voter_duties_msg">Remember that rights go with duties. As a voter I must:\n\n a) Keep my National ID or Passport safely.\n\n b) Vote whenever the opportunity is presented.\n\n c) Vote only once in a particular Election\n\n d) Give other Citizens the chance to vote.\n\n e) Use my Vote wisely and not sell it for money or any other temporary material gain.</string>
    <string name="election_offences">Offences related to Voting</string>
    <string name="election_offences_msg">a) Pretence to be unable to read or write so as to be assisted in voting.\n\n
b) Pretence to be visually impared or suffering from other disabillity so as to be assisted in voting.\n\n
c) Forgery or defacing of election materials.\n\n d) Defacing or Destroying ballot paper or election material.\n\n
e) Attempt to buy or sell ballot papers.\n\n f) Being found in possession of ballot papers, marked or unmarked.\n\n
g) Inserting or putting anything other than ballot paper in the ballot box.\n\n h) Removal of any election material from a polling station.\n\n
i) Interference with any Election material, used or intended to be used for an Election.\n\n
j) Attempts to print a ballot paper\n\n k) Making any mark on any ballot paper issued to any person other than to oneself.\n\n
l) Attempts to vote when not entitled to.\n\n
m) Attempts to vote more than once.\n\n n) Interference with a voter in casting of his vote in secret.</string>
    <string name="election_penalties">Penalties</string>
    <string name="election_penalties_msg">For any of the mentioned offences, one is liable of conviction to a fine not exceeding one million Kenya Shillings or to imprisonment for a term not exceeding six years or to both.</string>
    <string name="ballot_marking_main_text">How to Mark a Ballot</string>
    <string name="ballotmarking_message1">Once my details are confirmed on the register, I am issued with ballot papers to cast my vote.
The Polling Clerk gives me the ballot papers, I look at the ballot paper keenly to ensure that it bears IEBC validating rubber stamp. If the ballot paper is not rubber stamped, my vote will be rejected.</string>
    <string name="ballotmarking_message2">I take my ballot paper inside the voting screen so that no one can see whom I am voting for. There is a pen there for me to use.
I open the ballot to see the names of all the candidates. I find the name of the candidate I want.
I make an X in the space beside the name of the candidate I choose. The X is my vote. If I make a mistake, I can take my ballot back and ask for another one.</string>
    <string name="ballotmarking_message3">I fold my ballot to keep my vote a secret and cast it in the ballot box. I am keen to ensure that I place the ballot paper in a ballot box with corresponding/ similar colour.
Then I go to the polling clerk who will mark my left small finger with indelible ink. I have just voted! I collect my ID/Passport and leave the polling station.</string>
    <string name="valid_ballot_text">Look at examples of valid ballot papers</string>
    <string name="reject_ballot_text">Look at examples of rejected ballot papers</string>
    <string name="reject_ballot_button">Rejected Ballot Papers</string>
    <string name="valid_ballot_button">Valid Ballot Papers</string>
    <string name="valid_ballot_example">Examples of valid ballot papers</string>
    <string name="reject_ballot_example">Examples of rejected ballot papers</string>
    <string name="send_vote_invite">Remind your friends to vote by sending them an invite</string>
    <string name="action_deep_link">
        com.google.android.gms.samples.appinvite.DEEP_LINK_ACTION
    </string>
    <string name="invite">Send invitations!</string>
    <string name="welcome">Invites</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invitation_title">Send Invite to Vote</string>
    <string name="invitation_message">Remember to vote in these elections!</string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="invitation_cta">Install!</string>
    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>
    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>
    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="title_activity_show_reports">Show Reports</string>
    <string name="report_violation">Report an election offence to the authorities</string>
    <string name="search_parties_text">Search for a Political Party in Kenya</string>
    <string name="party_text">Political Party</string>
    <string name="partysymbol_text">Political Party Symbol</string>
    <string name="partyabbrv_text">Political Party Abbreviation</string>
    <string name="partywebsite_text">Political Party Website</string>
    <string name="party_details">Political Party Details</string>
</resources>