<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_voting_main_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/whyRegMainPageText"
                android:textSize="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/action_bar"
                android:text="@string/why_vote"
                android:textAlignment="center" />

            <Button
                android:id="@+id/speakVotingButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/read_aloud"
                android:drawableLeft="@drawable/ic_speaker_black_24dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/votingmainpage" />

            <TextView
                android:id="@+id/votingMainPageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/action_bar"
                android:text="@string/voting_msg" />

            <Button
                android:id="@+id/beginSliderButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="@color/dot_dark_screen1"
                android:text="@string/begin_slider" />

            <Button
                android:id="@+id/beginQuizzButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/begin_quiz" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
